--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,13 +1,9 @@
 {
     "$schema": "https://json.schemastore.org/prettierrc",
+    "plugins": ["prettier-plugin-jsdoc", "prettier-plugin-packagejson"],
 
     "semi": true,
     "singleQuote": false,
-    "trailingComma": "es5",
-
-    "plugins": [
-        "./node_modules/prettier-plugin-jsdoc/dist/index.js",
-        "prettier-plugin-packagejson"
-    ],
-    "jsdocPrintWidth": 80
+    "jsdocPrintWidth": 80,
+    "trailingComma": "es5"
 }
