--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cSpell.words": ["codegen", "Conforti", "moby", "packagejson", "typeclass"]
+    "cSpell.words": ["codegen", "Conforti", "execa", "moby", "packagejson", "rushstack", "typeclass"]
 }
