--- a/package.json
+++ b/package.json
@@ -19,28 +19,32 @@
         "dist/"
     ],
     "scripts": {
-        "build": "tsc",
-        "lint": "eslint ."
+        "build": "heft run --only build -- --clean"
     },
     "devDependencies": {
         "@effect/eslint-plugin": "0.1.2",
         "@effect/language-service": "0.0.21",
         "@effect/platform": "0.30.1",
         "@effect/platform-node": "0.31.1",
-        "@tsconfig/node18": "^18.2.2",
-        "@tsconfig/strictest": "^2.0.2",
-        "@types/node": "20.9.0",
-        "@typescript-eslint/eslint-plugin": "^6.12.0",
-        "@typescript-eslint/parser": "^6.12.0",
+        "@rushstack/heft": "0.63.2",
+        "@rushstack/heft-lint-plugin": "0.2.12",
+        "@rushstack/heft-typescript-plugin": "0.2.12",
+        "@tsconfig/node18": "18.2.2",
+        "@tsconfig/strictest": "2.0.2",
+        "@types/node": "20.10.0",
+        "@typescript-eslint/eslint-plugin": "6.12.0",
+        "@typescript-eslint/parser": "6.12.0",
         "effect": "2.0.0-next.55",
-        "eslint": "8.53.0",
+        "eslint": "8.54.0",
         "eslint-config-prettier": "9.0.0",
         "eslint-plugin-prettier": "5.0.1",
         "eslint-plugin-unicorn": "49.0.0",
+        "execa": "^8.0.1",
         "prettier": "3.1.0",
-        "prettier-plugin-jsdoc": "^1.1.1",
-        "prettier-plugin-packagejson": "^2.4.6",
-        "typescript": "5.2.2"
+        "prettier-plugin-jsdoc": "1.1.1",
+        "prettier-plugin-packagejson": "2.4.6",
+        "rimraf": "^5.0.5",
+        "typescript": "5.3.2"
     },
     "peerDependencies": {
         "@effect/platform": "~0.30.1",
