--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -8,7 +8,7 @@
         "ghcr.io/devcontainers/features/node:1": {},
         "ghcr.io/devcontainers/features/java:1": {},
         "ghcr.io/devcontainers/features/common-utils:2": {},
-        "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
     },
 
     "customizations": {
@@ -44,8 +44,19 @@
                     "**/Thumbs.db": true,
                     "**/temp": true
                 },
-                "cSpell.words": ["codegen", "Conforti", "execa", "moby", "packagejson", "rushstack", "typeclass"]
+                "cSpell.words": [
+                    "codegen",
+                    "Conforti",
+                    "execa",
+                    "moby",
+                    "packagejson",
+                    "rushstack",
+                    "tsdoc",
+                    "typeclass"
+                ]
             }
         }
-    }
+    },
+
+    "postCreateCommand": "npm install && npm run build"
 }
