--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "the-moby-effect",
-    "version": "0.0.1",
+    "version": "1.43.0",
     "description": "Docker API client automatically generated from the moby repository using swagger-codegen and effect-ts",
     "keywords": [
         "moby",
@@ -14,41 +14,47 @@
     "license": "MIT",
     "author": "Leo Conforti <leo@leoconforti.us> (https://leoconforti.us)",
     "type": "module",
-    "main": "dist/index.js",
+    "main": "dist/api.js",
     "files": [
         "dist/"
     ],
     "scripts": {
-        "build": "heft build --clean"
+        "build": "heft run --only build -- --clean",
+        "gen": "heft run --only gen -- --clean",
+        "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean"
+    },
+    "dependencies": {
+        "undici": "^5.28.1"
     },
     "devDependencies": {
-        "@effect/eslint-plugin": "0.1.2",
-        "@effect/language-service": "0.0.21",
         "@effect/platform": "0.30.1",
         "@effect/platform-node": "0.31.1",
+        "@effect/schema": "0.48.4",
+        "@rushstack/eslint-config": "3.5.0",
         "@rushstack/heft": "0.63.2",
+        "@rushstack/heft-jest-plugin": "0.10.4",
         "@rushstack/heft-lint-plugin": "0.2.12",
         "@rushstack/heft-typescript-plugin": "0.2.12",
-        "@tsconfig/node18": "18.2.2",
-        "@tsconfig/strictest": "2.0.2",
+        "@types/heft-jest": "1.0.6",
         "@types/node": "20.10.0",
-        "@typescript-eslint/eslint-plugin": "6.12.0",
-        "@typescript-eslint/parser": "6.12.0",
+        "@typescript-eslint/parser": "6.13.1",
         "effect": "2.0.0-next.55",
         "eslint": "8.54.0",
         "eslint-config-prettier": "9.0.0",
         "eslint-plugin-prettier": "5.0.1",
         "eslint-plugin-unicorn": "49.0.0",
-        "execa": "^8.0.1",
+        "execa": "8.0.1",
         "prettier": "3.1.0",
         "prettier-plugin-jsdoc": "1.1.1",
         "prettier-plugin-packagejson": "2.4.6",
-        "rimraf": "^5.0.5",
+        "rimraf": "5.0.5",
+        "ts-node": "10.9.1",
         "typescript": "5.3.2"
     },
     "peerDependencies": {
         "@effect/platform": "~0.30.1",
         "@effect/platform-node": "~0.31.1",
+        "@effect/schema": "~0.48.4",
         "effect": "~2.0.0-next.55"
     },
     "engines": {
