--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,10 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
-
-    // Can be used once https://github.com/microsoft/rushstack/pull/4103 is merged?
-    // "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node18/tsconfig.json"],
-
-    "compilerOptions": {
-        "pretty": true,
-        "sourceMap": true,
-        "declaration": true,
-        "outDir": "./dist",
-        "plugins": [{ "name": "@effect/language-service" }],
-
-        // https://github.com/tsconfig/bases/blob/main/bases/node18.json
-        "lib": ["es2022"],
-        "target": "es2022",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-
-        // https://github.com/tsconfig/bases/blob/main/bases/strictest.json
-        "strict": true,
-        "allowUnusedLabels": false,
-        "allowUnreachableCode": false,
-        "exactOptionalPropertyTypes": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitOverride": true,
-        "noImplicitReturns": true,
-        "noPropertyAccessFromIndexSignature": true,
-        "noUncheckedIndexedAccess": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "isolatedModules": true,
-        "forceConsistentCasingInFileNames": true
-    },
-    "include": ["src/**/*.ts"]
+    "extends": "./tsconfig.base.json",
+    "references": [
+        { "path": "./gen/tsconfig.gen.json" },
+        { "path": "./src/tsconfig.src.json" },
+        { "path": "./test/tsconfig.test.json" }
+    ],
+    "files": [],
+    "include": []
 }
