--- a/package.json
+++ b/package.json
@@ -16,19 +16,23 @@
     "type": "module",
     "main": "dist/api.js",
     "files": [
-        "dist/"
+        "dist/api.d.ts",
+        "dist/api.d.ts.map",
+        "dist/api.js",
+        "dist/api.js.map"
     ],
     "scripts": {
         "build": "heft run --only build -- --clean",
         "gen": "heft run --only gen -- --clean",
+        "playground": "TS_NODE_PROJECT=./examples/tsconfig.examples.json node --no-warnings=ExperimentalWarning --loader ts-node/esm ./examples/playground.ts",
         "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean"
     },
     "dependencies": {
+        "ssh2": "^1.14.0",
         "undici": "^5.28.1"
     },
     "devDependencies": {
         "@effect/platform": "0.30.1",
-        "@effect/platform-node": "0.31.1",
         "@effect/schema": "0.48.4",
         "@rushstack/eslint-config": "3.5.0",
         "@rushstack/heft": "0.63.2",
@@ -37,6 +41,7 @@
         "@rushstack/heft-typescript-plugin": "0.2.12",
         "@types/heft-jest": "1.0.6",
         "@types/node": "20.10.0",
+        "@types/ssh2": "1.11.18",
         "@typescript-eslint/parser": "6.13.1",
         "effect": "2.0.0-next.55",
         "eslint": "8.54.0",
@@ -53,11 +58,10 @@
     },
     "peerDependencies": {
         "@effect/platform": "~0.30.1",
-        "@effect/platform-node": "~0.31.1",
         "@effect/schema": "~0.48.4",
         "effect": "~2.0.0-next.55"
     },
     "engines": {
-        "node": ">=16"
+        "node": ">=18"
     }
 }
