--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "undici": "^5.28.1"
     },
     "devDependencies": {
-        "@effect/platform": "0.30.1",
+        "@effect/platform-node": "0.31.1",
         "@effect/schema": "0.48.4",
         "@rushstack/eslint-config": "3.5.0",
         "@rushstack/heft": "0.63.2",
@@ -57,7 +57,7 @@
         "typescript": "5.3.2"
     },
     "peerDependencies": {
-        "@effect/platform": "~0.30.1",
+        "@effect/platform-node": "~0.31.1",
         "@effect/schema": "~0.48.4",
         "effect": "~2.0.0-next.55"
     },
