--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -6,7 +6,6 @@
     "features": {
         "ghcr.io/devcontainers/features/git:1": {},
         "ghcr.io/devcontainers/features/node:1": {},
-        "ghcr.io/devcontainers/features/java:1": {},
         "ghcr.io/devcontainers/features/common-utils:2": {},
         "ghcr.io/devcontainers/features/docker-in-docker:2": {
             "moby": false,
@@ -37,6 +36,10 @@
                 "[typescript][typescriptreact][javascript][javascriptreact][json][jsonc]": {
                     "editor.defaultFormatter": "esbenp.prettier-vscode"
                 },
+                "editor.codeActionsOnSave": {
+                    "source.organizeImports": "always",
+                    "source.addMissingImports": "always"
+                },
                 "files.exclude": {
                     "**/.git": true,
                     "**/.svn": true,
@@ -47,15 +50,104 @@
                     "**/temp": true
                 },
                 "cSpell.words": [
+                    "Addrs",
+                    "aufs",
+                    "Awslogs",
+                    "Blkio",
+                    "buildargs",
+                    "cachefrom",
+                    "Cachemount",
+                    "Cfssl",
+                    "cgroupfs",
+                    "Cgroupns",
+                    "Cgroups",
                     "codegen",
-                    "Conforti",
-                    "dhawan",
+                    "conta",
+                    "containerd",
+                    "cpuperiod",
+                    "cpuquota",
+                    "cpuset",
+                    "cpusetcpus",
+                    "cpushares",
+                    "Datacenter",
+                    "Dnsrr",
+                    "Domainname",
+                    "emptystring",
+                    "endport",
+                    "Etwlogs",
                     "execa",
-                    "moby",
+                    "extrahosts",
+                    "failcnt",
+                    "Fluentd",
+                    "forcerm",
+                    "Gelf",
+                    "GOARCH",
+                    "goroutines",
+                    "gvtg",
+                    "healthcheck",
+                    "HKEY",
+                    "HKLM",
+                    "Httpv",
+                    "hyperv",
+                    "IPAM",
+                    "ivku",
+                    "janedoe",
+                    "kmem",
+                    "memswap",
+                    "Moby",
+                    "mobydock",
+                    "Mountpoint",
+                    "mountpoints",
+                    "myimage",
+                    "namedspaced",
+                    "NCPU",
+                    "ndots",
+                    "networkmode",
+                    "nocopy",
+                    "noexec",
+                    "nofile",
+                    "nondistributable",
+                    "noprune",
+                    "nosuid",
+                    "npipe",
+                    "NUMA",
+                    "ONBUILD",
+                    "onewriter",
+                    "operatingsystem",
                     "packagejson",
+                    "percpu",
+                    "Pids",
+                    "precpu",
+                    "resolv",
+                    "rize",
+                    "Rootfs",
+                    "Rprivate",
+                    "Rshared",
+                    "Rslave",
+                    "runc",
+                    "runtimes",
                     "rushstack",
+                    "seccomp",
+                    "serveraddress",
+                    "shmsize",
+                    "sinds",
+                    "someimage",
+                    "someuser",
+                    "startport",
+                    "Sysctls",
+                    "tarfile",
+                    "Templating",
+                    "Tmpfs",
                     "tsdoc",
-                    "typeclass"
+                    "UIDGID",
+                    "Ulimits",
+                    "Unlockkey",
+                    "usernamespace",
+                    "Userns",
+                    "VTEP",
+                    "VXLAN",
+                    "WORKDIR",
+                    "Yieldable"
                 ]
             }
         }
