--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,9 @@
 {
     "$schema": "https://json.schemastore.org/prettierrc",
-    "plugins": ["prettier-plugin-packagejson"],
+    "plugins": ["prettier-plugin-packagejson", "prettier-plugin-jsdoc"],
 
     "semi": true,
     "singleQuote": false,
+    "jsdocPrintWidth": 80,
     "trailingComma": "es5"
 }
