add dind to dictionary

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -70,6 +70,7 @@
                     "cpusetcpus",
                     "cpushares",
                     "Datacenter",
+                    "dind",
                     "Dnsrr",
                     "Domainname",
                     "emptystring",
