--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
         "ssh2": "^1.14.0"
     },
     "devDependencies": {
-        "@effect/platform-node": "0.34.0",
+        "@effect/platform-node": "0.34.3",
         "@effect/schema": "0.52.0",
         "@rushstack/eslint-config": "3.5.0",
-        "@rushstack/heft": "0.63.3",
-        "@rushstack/heft-jest-plugin": "0.10.5",
-        "@rushstack/heft-lint-plugin": "0.2.13",
-        "@rushstack/heft-typescript-plugin": "0.2.13",
+        "@rushstack/heft": "0.63.4",
+        "@rushstack/heft-jest-plugin": "0.10.6",
+        "@rushstack/heft-lint-plugin": "0.2.14",
+        "@rushstack/heft-typescript-plugin": "0.2.14",
         "@types/heft-jest": "1.0.6",
-        "@types/node": "20.10.3",
+        "@types/node": "20.10.4",
         "@types/ssh2": "1.11.18",
+        "@types/tar-fs": "^2.0.4",
         "@typescript-eslint/parser": "6.13.2",
         "effect": "2.0.0-next.59",
         "eslint": "8.55.0",
@@ -46,11 +47,12 @@
         "prettier": "3.1.0",
         "prettier-plugin-jsdoc": "1.1.1",
         "prettier-plugin-packagejson": "2.4.7",
-        "ts-node": "10.9.1",
+        "tar-fs": "^3.0.4",
+        "ts-node": "10.9.2",
         "typescript": "5.3.3"
     },
     "peerDependencies": {
-        "@effect/platform-node": "~0.34.0",
+        "@effect/platform-node": "~0.34.3",
         "@effect/schema": "~0.52.0",
         "effect": "~2.0.0-next.59",
         "fast-check": "~3.14.0"
