--- a/config/jest.config.json
+++ b/config/jest.config.json
@@ -2,8 +2,7 @@
     "extends": "@rushstack/heft-jest-plugin/includes/jest-shared.config.json",
     "roots": ["<rootDir>/dist"],
     "testMatch": ["<rootDir>/dist/test/*.test.js"],
-    "collectCoverageFrom": ["<rootDir>/dist/*.js"],
+    "collectCoverageFrom": ["<rootDir>/dist/src/*.js"],
     "collectCoverage": true,
-    "coverageProvider": "v8",
-    "coverageReporters": ["cobertura"]
+    "coverageProvider": "v8"
 }
