--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -57,6 +57,7 @@
                     "buildargs",
                     "cachefrom",
                     "Cachemount",
+                    "certdir",
                     "Cfssl",
                     "cgroupfs",
                     "Cgroupns",
@@ -64,6 +65,7 @@
                     "codegen",
                     "conta",
                     "containerd",
+                    "cooldown",
                     "cpuperiod",
                     "cpuquota",
                     "cpuset",
