--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
 hoist = false
 auto-install-peers = false
-strict-peer-dependencies = true
+
+# Have to turn this off because of "@effect/experimental": 0.3.1
+strict-peer-dependencies = false
