--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
         "ssh2": "^1.14.0"
     },
     "devDependencies": {
-        "@effect/experimental": "0.3.1",
-        "@effect/platform-node": "0.35.0",
-        "@effect/schema": "0.53.0",
+        "@effect/experimental": "0.3.2",
+        "@effect/platform": "^0.37.0",
+        "@effect/platform-node": "0.37.0",
+        "@effect/schema": "0.53.2",
         "@rushstack/eslint-config": "3.5.0",
         "@rushstack/heft": "0.63.4",
         "@rushstack/heft-jest-plugin": "0.10.6",
@@ -38,7 +39,7 @@
         "@types/node": "20.10.4",
         "@types/ssh2": "1.11.18",
         "@types/tar-fs": "2.0.4",
-        "@typescript-eslint/parser": "6.13.2",
+        "@typescript-eslint/parser": "6.14.0",
         "effect": "2.0.0-next.60",
         "eslint": "8.55.0",
         "eslint-config-prettier": "9.1.0",
@@ -50,12 +51,13 @@
         "prettier-plugin-packagejson": "2.4.7",
         "tar-fs": "3.0.4",
         "ts-node": "10.9.2",
+        "tsx": "^4.6.2",
         "typescript": "5.3.3",
         "ws": "8.15.1"
     },
     "peerDependencies": {
         "@effect/experimental": "0.3.1",
-        "@effect/platform-node": "~0.35.0",
+        "@effect/platform-node": "~0.37.0",
         "@effect/schema": "~0.53.0",
         "effect": "~2.0.0-next.60",
         "fast-check": "~3.14.0",
@@ -66,7 +68,7 @@
     },
     "pnpm": {
         "patchedDependencies": {
-            "@effect/platform-node@0.35.0": "patches/@effect__platform-node@0.35.0.patch"
+            "@effect/platform-node@0.37.0": "patches/@effect__platform-node@0.37.0.patch"
         }
     }
 }
