--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,3 @@
 hoist = false
 auto-install-peers = false
-
-# Have to turn this off because of "@effect/experimental": 0.3.1
-strict-peer-dependencies = false
+strict-peer-dependencies = true
