--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.0.1",
         "eslint-plugin-unicorn": "49.0.0",
+        "execa": "^8.0.1",
         "fast-check": "3.14.0",
         "openapi-types": "12.1.3",
         "prettier": "3.1.1",
