--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "license": "MIT",
     "author": "Leo Conforti <leo@leoconforti.us> (https://leoconforti.us)",
     "type": "module",
-    "main": "dist/src/main.js",
+    "main": "dist/src/index.js",
     "files": [
         "dist/src"
     ],
@@ -24,14 +24,13 @@
         "playground": "node --no-warnings=ExperimentalWarning --loader ts-node/esm ./examples/playground.ts"
     },
     "dependencies": {
-        "ssh2": "^1.14.0"
+        "ssh2": "^1.15.0"
     },
     "devDependencies": {
-        "@apidevtools/swagger-parser": "10.1.0",
-        "@effect/experimental": "0.3.2",
-        "@effect/platform": "0.37.6",
-        "@effect/platform-node": "0.37.8",
-        "@effect/schema": "0.53.3",
+        "@effect/experimental": "0.4.0",
+        "@effect/platform": "0.38.0",
+        "@effect/platform-node": "0.38.0",
+        "@effect/schema": "0.54.0",
         "@rushstack/eslint-config": "3.5.1",
         "@rushstack/heft": "0.63.4",
         "@rushstack/heft-jest-plugin": "0.10.6",
@@ -39,32 +38,29 @@
         "@rushstack/heft-typescript-plugin": "0.2.14",
         "@types/eslint": "8.44.9",
         "@types/heft-jest": "1.0.6",
-        "@types/node": "20.10.4",
+        "@types/node": "20.10.5",
         "@types/ssh2": "1.11.18",
         "@types/tar-fs": "2.0.4",
-        "@typescript-eslint/parser": "6.14.0",
-        "effect": "2.0.0-next.60",
+        "@typescript-eslint/parser": "6.15.0",
+        "effect": "2.0.0-next.61",
         "eslint": "8.56.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.0.1",
         "eslint-plugin-unicorn": "49.0.0",
-        "execa": "^8.0.1",
-        "fast-check": "3.14.0",
-        "openapi-types": "12.1.3",
+        "fast-check": "3.15.0",
         "prettier": "3.1.1",
         "prettier-plugin-jsdoc": "1.1.1",
         "prettier-plugin-packagejson": "2.4.7",
         "tar-fs": "3.0.4",
-        "ts-node": "10.9.2",
         "typescript": "5.3.3",
         "ws": "8.15.1"
     },
     "peerDependencies": {
-        "@effect/experimental": "0.3.1",
-        "@effect/platform-node": "~0.37.8",
-        "@effect/schema": "~0.53.0",
-        "effect": "~2.0.0-next.60",
-        "fast-check": "~3.14.0",
+        "@effect/experimental": "0.4.0",
+        "@effect/platform-node": "~0.38.0",
+        "@effect/schema": "~0.54.0",
+        "effect": "~2.0.0-next.61",
+        "fast-check": "~3.15.0",
         "ws": "~8.15.1"
     },
     "engines": {
