--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -63,6 +63,7 @@
                     "Cgroupns",
                     "Cgroups",
                     "codegen",
+                    "conforti",
                     "conta",
                     "containerd",
                     "cooldown",
@@ -117,6 +118,7 @@
                     "ONBUILD",
                     "onewriter",
                     "operatingsystem",
+                    "opencontainers",
                     "packagejson",
                     "percpu",
                     "Pids",
