--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -50,6 +50,7 @@
                     "**/temp": true
                 },
                 "cSpell.words": [
+                    "aaahhhhh",
                     "Addrs",
                     "aufs",
                     "Awslogs",
