--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "pretty": true,
         "sourceMap": true,
         "declaration": true,
+        "resolveJsonModule": true,
         "outDir": "./dist",
         "types": ["node", "heft-jest"],
 
@@ -32,5 +33,5 @@
         "isolatedModules": true,
         "forceConsistentCasingInFileNames": true
     },
-    "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts"]
+    "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts", "gen/**/*.ts"]
 }
