--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "the-moby-effect",
     "version": "1.43.2",
-    "description": "Docker API client automatically generated from the moby repository using swagger-codegen and effect-ts",
+    "description": "Docker daemon API client built using effect-ts",
     "keywords": [
         "moby",
         "docker"
@@ -27,41 +27,48 @@
         "ssh2": "^1.15.0"
     },
     "devDependencies": {
-        "@effect/experimental": "0.4.0",
-        "@effect/platform": "0.38.0",
-        "@effect/platform-node": "0.38.0",
-        "@effect/schema": "0.54.0",
+        "@effect/experimental": "0.5.1",
+        "@effect/platform": "0.39.0",
+        "@effect/platform-node": "0.39.0",
+        "@effect/schema": "0.56.0",
         "@rushstack/eslint-config": "3.5.1",
-        "@rushstack/heft": "0.63.4",
-        "@rushstack/heft-jest-plugin": "0.10.6",
-        "@rushstack/heft-lint-plugin": "0.2.14",
-        "@rushstack/heft-typescript-plugin": "0.2.14",
+        "@rushstack/heft": "0.63.5",
+        "@rushstack/heft-jest-plugin": "0.10.7",
+        "@rushstack/heft-lint-plugin": "0.2.15",
+        "@rushstack/heft-typescript-plugin": "0.2.15",
+        "@types/eslint": "^8.56.0",
         "@types/heft-jest": "1.0.6",
         "@types/node": "20.10.5",
         "@types/ssh2": "1.11.18",
         "@types/tar-fs": "2.0.4",
-        "effect": "2.0.0-next.61",
+        "effect": "2.0.0-next.62",
         "eslint": "8.56.0",
         "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-prettier": "5.0.1",
-        "eslint-plugin-unicorn": "49.0.0",
+        "eslint-plugin-prettier": "5.1.1",
+        "eslint-plugin-unicorn": "50.0.1",
         "fast-check": "3.15.0",
         "prettier": "3.1.1",
         "prettier-plugin-jsdoc": "1.1.1",
         "prettier-plugin-packagejson": "2.4.7",
         "tar-fs": "3.0.4",
+        "ts-node": "^10.9.2",
         "typescript": "5.3.3",
         "ws": "8.15.1"
     },
     "peerDependencies": {
-        "@effect/experimental": "0.4.0",
-        "@effect/platform-node": "~0.38.0",
-        "@effect/schema": "~0.54.0",
-        "effect": "~2.0.0-next.61",
+        "@effect/experimental": "0.5.1",
+        "@effect/platform-node": "~0.39.0",
+        "@effect/schema": "~0.56.0",
+        "effect": "~2.0.0-next.62",
         "fast-check": "~3.15.0",
         "ws": "~8.15.1"
     },
     "engines": {
         "node": ">=16"
+    },
+    "pnpm": {
+        "patchedDependencies": {
+            "@effect/platform-node@0.39.0": "patches/@effect__platform-node@0.39.0.patch"
+        }
     }
 }
