add word to dictionary

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -103,6 +103,7 @@
                     "mobydock",
                     "Mountpoint",
                     "mountpoints",
+                    "mydockerimage",
                     "myimage",
                     "namedspaced",
                     "NCPU",
