add a jest setup script to automatically download all the engine images we will test against

--- a/config/jest.config.json
+++ b/config/jest.config.json
@@ -3,6 +3,7 @@
     "roots": ["<rootDir>/dist"],
     "testMatch": ["<rootDir>/dist/test/*.test.js"],
     "collectCoverageFrom": ["<rootDir>/dist/src/*.js"],
+    "globalSetup": "<rootDir>/dist/test/setup.js",
     "collectCoverage": true,
     "coverageProvider": "v8"
 }
