--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
         "dist/src"
     ],
     "scripts": {
-        "build": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean",
-        "playground": "node --no-warnings=ExperimentalWarning --loader ts-node/esm ./examples/playground.ts"
+        "build": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean"
     },
     "dependencies": {
         "ssh2": "^1.15.0"
@@ -49,6 +48,7 @@
         "prettier-plugin-jsdoc": "1.3.0",
         "prettier-plugin-packagejson": "2.4.7",
         "tar-fs": "3.0.4",
+        "tsx": "^4.7.0",
         "typescript": "5.3.3",
         "ws": "8.15.1"
     },
