update dev container

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -65,6 +65,7 @@
                     "Cgroups",
                     "codegen",
                     "conforti",
+                    "confo014",
                     "conta",
                     "containerd",
                     "cooldown",
