--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - uses: docker/setup-qemu-action@v3
+    - uses: docker/setup-buildx-action@v3
+
+    - uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: test/agent-ssh.dockerfile
+        tags: ssh-dind:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        platforms: linux/amd64,linux/arm64
 
     - name: Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
