--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: docker/setup-qemu-action@v3
     - uses: docker/setup-buildx-action@v3
 
+    - run: docker images
+
     - uses: docker/build-push-action@v5
       with:
         context: .
@@ -26,6 +28,8 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
+
+    - run: docker images
 
     - name: Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
