--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
     - uses: docker/build-push-action@v5
       with:
         context: .
+        load: true
         file: test/agent-ssh.dockerfile
         tags: ssh-dind:latest
         cache-from: type=gha
