--- a/package.json
+++ b/package.json
@@ -25,47 +25,40 @@
         "ssh2": "^1.15.0"
     },
     "devDependencies": {
-        "@effect/experimental": "0.5.3",
-        "@effect/platform": "0.39.0",
-        "@effect/platform-node": "0.39.0",
-        "@effect/schema": "0.56.1",
+        "@effect/experimental": "0.6.2",
+        "@effect/platform": "0.41.0",
+        "@effect/platform-node": "0.41.0",
+        "@effect/schema": "0.59.1",
         "@rushstack/eslint-config": "3.5.1",
-        "@rushstack/heft": "0.63.5",
-        "@rushstack/heft-jest-plugin": "0.10.7",
-        "@rushstack/heft-lint-plugin": "0.2.15",
-        "@rushstack/heft-typescript-plugin": "0.2.15",
+        "@rushstack/heft": "0.63.6",
+        "@rushstack/heft-jest-plugin": "0.10.8",
+        "@rushstack/heft-lint-plugin": "0.2.16",
+        "@rushstack/heft-typescript-plugin": "0.2.16",
         "@types/heft-jest": "1.0.6",
-        "@types/node": "20.10.5",
+        "@types/node": "20.11.0",
         "@types/ssh2": "1.11.18",
         "@types/tar-fs": "2.0.4",
-        "effect": "2.0.0-next.62",
+        "effect": "2.0.3",
         "eslint": "8.56.0",
         "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-prettier": "5.1.2",
+        "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-unicorn": "50.0.1",
         "fast-check": "3.15.0",
-        "prettier": "3.1.1",
+        "prettier": "3.2.1",
         "prettier-plugin-jsdoc": "1.3.0",
-        "prettier-plugin-packagejson": "2.4.8",
+        "prettier-plugin-packagejson": "2.4.9",
         "tar-fs": "3.0.4",
         "tsx": "^4.7.0",
         "typescript": "5.3.3",
         "ws": "8.16.0"
     },
     "peerDependencies": {
-        "@effect/experimental": "0.5.3",
-        "@effect/platform-node": "~0.39.0",
-        "@effect/schema": "~0.56.1",
-        "effect": "~2.0.0-next.62",
-        "fast-check": "~3.15.0",
-        "ws": "~8.16.0"
+        "@effect/experimental": "0.6.2",
+        "@effect/platform-node": "~0.41.0",
+        "@effect/schema": "~0.59.1",
+        "effect": "~2.0.3"
     },
     "engines": {
         "node": ">=16"
-    },
-    "pnpm": {
-        "patchedDependencies": {
-            "@effect/platform-node@0.39.0": "patches/@effect__platform-node@0.39.0.patch"
-        }
     }
 }
