add demultiplexing to dictionary

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -76,6 +76,7 @@
                     "cpushares",
                     "Datacenter",
                     "demux",
+                    "demultiplexing",
                     "dind",
                     "Dnsrr",
                     "Domainname",
