--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
 
     - uses: docker/build-push-action@v5
       with:
