--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
-        os: [ubuntu-latest, windows-latest, mac-latest]
+        os: [ubuntu-latest, mac-latest]
 
     runs-on: ${{ matrix.os }}
 
