--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: docker/setup-buildx-action@v3
-      with:
-        driver: docker
+
+    - name: Enable containerd image store
+      run: |
+        cat /etc/docker/daemon.json
+        echo '{ "features": { "containerd-snapshotter": true } }' > /etc/docker/daemon.json
+        cat /etc/docker/daemon.json
+        sudo systemctl restart docker
 
     - uses: docker/build-push-action@v5
       with:
