test containerd image store

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      env:
+    - env:
         DOCKER_CLI_EXPERIMENTAL: enabled
 
     - uses: actions/checkout@v4
