--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ jobs:
         file: test/agent-ssh.dockerfile
         tags: ssh-dind:latest
         platforms: linux/amd64,linux/arm64,windows/amd64
-        outputs: type=docker,dest=/tmp/ssh-dind-docker-image.tar
+        outputs: type=oci,dest=/tmp/ssh-dind-docker-image.tar
+    - name: a
+      run: ls -la /tmp/
     - uses: actions/upload-artifact@v4
       with:
         name: ssh-dind-docker-image
