--- a/package.json
+++ b/package.json
@@ -22,41 +22,40 @@
         "build": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean"
     },
     "dependencies": {
-        "ssh2": "^1.15.0"
+        "ssh2": "~1.15.0"
     },
     "devDependencies": {
-        "@effect/experimental": "0.6.8",
-        "@effect/platform": "0.42.4",
-        "@effect/platform-node": "0.41.5",
-        "@effect/schema": "0.60.4",
-        "@rushstack/eslint-config": "3.6.0",
-        "@rushstack/heft": "0.64.0",
-        "@rushstack/heft-jest-plugin": "0.11.0",
-        "@rushstack/heft-lint-plugin": "0.3.0",
-        "@rushstack/heft-typescript-plugin": "0.3.0",
+        "@effect/experimental": "0.8.6",
+        "@effect/platform": "0.43.7",
+        "@effect/platform-node": "0.42.7",
+        "@effect/schema": "0.61.5",
+        "@rushstack/eslint-config": "3.6.2",
+        "@rushstack/heft": "0.64.3",
+        "@rushstack/heft-jest-plugin": "0.11.3",
+        "@rushstack/heft-lint-plugin": "0.3.3",
+        "@rushstack/heft-typescript-plugin": "0.3.3",
         "@types/heft-jest": "1.0.6",
-        "@types/node": "20.11.5",
-        "@types/ssh2": "1.11.18",
+        "@types/node": "20.11.13",
+        "@types/ssh2": "1.11.19",
         "@types/tar-fs": "2.0.4",
-        "effect": "2.1.1",
+        "effect": "2.2.3",
         "eslint": "8.56.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-unicorn": "50.0.1",
-        "fast-check": "3.15.0",
+        "fast-check": "3.15.1",
         "prettier": "3.2.4",
         "prettier-plugin-jsdoc": "1.3.0",
-        "prettier-plugin-packagejson": "2.4.9",
+        "prettier-plugin-packagejson": "2.4.10",
         "tar-fs": "3.0.4",
-        "tsx": "^4.7.0",
         "typescript": "5.3.3",
         "ws": "8.16.0"
     },
     "peerDependencies": {
-        "@effect/experimental": "0.6.8",
-        "@effect/platform-node": "~0.41.5",
-        "@effect/schema": "~0.60.4",
-        "effect": "~2.1.1"
+        "@effect/experimental": "0.8.6",
+        "@effect/platform-node": "0.42.7",
+        "@effect/schema": "0.61.5",
+        "effect": "~2.2.0"
     },
     "engines": {
         "node": ">=16"
