--- a/package.json
+++ b/package.json
@@ -25,15 +25,20 @@
         "ssh2": "~1.15.0"
     },
     "devDependencies": {
+        "@effect/cli": "0.31.7",
         "@effect/experimental": "0.8.6",
         "@effect/platform": "0.43.7",
         "@effect/platform-node": "0.42.7",
+        "@effect/printer": "0.30.12",
+        "@effect/printer-ansi": "0.31.12",
         "@effect/schema": "0.61.5",
+        "@effect/typeclass": "0.22.12",
         "@rushstack/eslint-config": "3.6.2",
         "@rushstack/heft": "0.64.3",
         "@rushstack/heft-jest-plugin": "0.11.3",
         "@rushstack/heft-lint-plugin": "0.3.3",
         "@rushstack/heft-typescript-plugin": "0.3.3",
+        "@rushstack/heft-webpack5-plugin": "0.9.20",
         "@types/heft-jest": "1.0.6",
         "@types/node": "20.11.13",
         "@types/ssh2": "1.11.19",
@@ -44,11 +49,13 @@
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-unicorn": "50.0.1",
         "fast-check": "3.15.1",
+        "node-loader": "^2.0.0",
         "prettier": "3.2.4",
         "prettier-plugin-jsdoc": "1.3.0",
         "prettier-plugin-packagejson": "2.4.10",
         "tar-fs": "3.0.4",
         "typescript": "5.3.3",
+        "webpack": "5.82.1",
         "ws": "8.16.0"
     },
     "peerDependencies": {
