--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: CI
 
 on:
   push:
@@ -7,47 +7,40 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  docker-build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
-
+        dockerfile: ["ssh", "http", "https", "socket"]
+    permissions:
+      contents: read
+      packages: write
     steps:
     - uses: actions/checkout@v4
     - uses: docker/setup-qemu-action@v3
     - uses: docker/setup-buildx-action@v3
-
+    - uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - uses: docker/metadata-action@v5
+      id: meta
+      with:
+        images: ghcr.io/${{ github.repository }}/${{ matrix.dockerfile }}-dind
     - uses: docker/build-push-action@v5
       with:
         context: .
-        load: true
-        file: test/agent-ssh.dockerfile
-        tags: ssh-dind:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
-
-    - name: Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64,linux/arm64,windows/amd64
+        push: ${{ github.event_name != 'pull_request' }}
+        file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
+        outputs: type=oci,dest=/tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
+   - uses: actions/upload-artifact@v4
       with:
-        node-version: ${{ matrix.node-version }}
-
-    - uses: pnpm/action-setup@v2
-      with:
-        version: 8
-        run_install: false
-
-    - name: Get pnpm store directory
-      shell: bash
-      run: |
-        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-    - uses: actions/cache@v3
-      with:
-        path: ${{ env.STORE_PATH }}
-        key: ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-            ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-
-
-    - run: pnpm install
-    - run: pnpm build
+        name: ${{ matrix.dockerfile }}-dind-docker-image
+        path: /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
+        if-no-files-found: error
