--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,9 @@ jobs:
         cache-to: type=gha,mode=max
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        platforms: linux/amd64,linux/arm64,windows/amd64
         push: ${{ github.event_name != 'pull_request' }}
         file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
+        platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
         outputs: type=oci,dest=/tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
     - uses: actions/upload-artifact@v4
       with:
