--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
   docker-build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         dockerfile: ["ssh", "http", "https", "socket"]
     permissions:
@@ -44,3 +45,48 @@ jobs:
         name: ${{ matrix.dockerfile }}-dind-docker-image
         path: /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
         if-no-files-found: error
+
+  services:
+    runs-on: ubuntu-latest
+    needs: docker-build
+    strategy:
+      fail-fast: false
+      matrix:
+        dockerfile: ["ssh", "http", "https", "socket"]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v4
+      with:
+        name: ${{ matrix.dockerfile }}-dind-docker-image
+    - run: docker load --input ${{ matrix.dockerfile }}-dind-docker-image.tar
+    - run: docker image ls -a
+
+#   build:
+#     needs: docker-build
+#     runs-on: ${{ matrix.os }}
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         node-version: [16.x, 18.x, 20.x]
+#         os: [ubuntu-latest, macos-latest, windows-latest]
+#     steps:
+#     - uses: actions/checkout@v4
+#     - uses: actions/setup-node@v4
+#       with:
+#         node-version: ${{ matrix.node-version }}
+#     - uses: pnpm/action-setup@v2
+#       with:
+#         version: 8
+#         run_install: false
+#     - name: Get pnpm store directory
+#       shell: bash
+#       run: |
+#         echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+#     - uses: actions/cache@v3
+#       with:
+#         path: ${{ env.STORE_PATH }}
+#         key: ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+#         restore-keys: |
+#             ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-
+#     - run: pnpm install
+#     - run: pnpm build
