--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         path: /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
         if-no-files-found: error
 
-  services:
+  docker-services:
     runs-on: ubuntu-latest
     needs: docker-build
     strategy:
@@ -59,7 +59,7 @@ jobs:
       with:
         name: ${{ matrix.dockerfile }}-dind-docker-image
         path: /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
-    - run: docker load --input /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
+    - run: docker image import /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
     - run: docker image ls -a
 
 #   build:
