--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,7 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
         platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
-        outputs: type=oci,dest=/tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
-    - run: docker image ls -a
+        outputs: type=docker,dest=/tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
     - uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.dockerfile }}-dind-docker-image
@@ -60,7 +59,7 @@ jobs:
       with:
         path: /tmp
         name: ${{ matrix.dockerfile }}-dind-docker-image
-    - run: docker import /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
+    - run: docker load --input /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
     - run: docker image ls -a
 
 #   build:
