--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-    outputs:
-      tag: ${{ steps.meta.outputs.tags }}
     steps:
     - uses: actions/checkout@v4
     - uses: docker/setup-qemu-action@v3
@@ -38,31 +36,83 @@ jobs:
         cache-to: type=gha,mode=max
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        push: ${{ github.event_name != 'pull_request' }}
         file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
         platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
         outputs: type=oci,dest=/tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
+        push: ${{ github.event_name != 'pull_request' && github.event_name != 'workflow_dispatch' }}
     - uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.dockerfile }}-dind-docker-image
         path: /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
         if-no-files-found: error
 
-  docker-services:
+  ssh-docker-service:
     runs-on: ubuntu-latest
-    needs: docker-build
-    strategy:
-      fail-fast: false
-      matrix:
-        dockerfile: ["ssh", "http", "https", "socket"]
+    needs: [docker-build]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
       with:
         path: /tmp
-        name: ${{ matrix.dockerfile }}-dind-docker-image
-    - run: docker import /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar ${{ needs.docker-build.outputs.tag }}
+        name: ssh-dind-docker-image
+    - uses: docker/metadata-action@v5
+      id: meta
+      with:
+        images: ghcr.io/${{ github.repository }}/ssh-dind
+    - run: docker import /tmp/ssh-dind-docker-image.tar ${{ steps.meta.outputs.tags }}
     - run: docker image ls -a
+    - run: timeout 5m docker run --rm --privileged ${{ steps.meta.outputs.tags }}
+
+  http-docker-service:
+    runs-on: ubuntu-latest
+    needs: [docker-build]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v4
+      with:
+        path: /tmp
+        name: http-dind-docker-image
+    - uses: docker/metadata-action@v5
+      id: meta
+      with:
+        images: ghcr.io/${{ github.repository }}/http-dind
+    - run: docker import /tmp/http-dind-docker-image.tar ${{ steps.meta.outputs.tags }}
+    - run: docker image ls -a
+    - run: timeout 5m docker run --rm --privileged ${{ steps.meta.outputs.tags }}
+
+  https-docker-service:
+    runs-on: ubuntu-latest
+    needs: [docker-build]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v4
+      with:
+        path: /tmp
+        name: https-dind-docker-image
+    - uses: docker/metadata-action@v5
+      id: meta
+      with:
+        images: ghcr.io/${{ github.repository }}/https-dind
+    - run: docker import /tmp/https-dind-docker-image.tar ${{ steps.meta.outputs.tags }}
+    - run: docker image ls -a
+    - run: timeout 5m docker run --rm --privileged ${{ steps.meta.outputs.tags }}
+
+  socket-docker-service:
+    runs-on: ubuntu-latest
+    needs: [docker-build]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v4
+      with:
+        path: /tmp
+        name: socket-dind-docker-image
+    - uses: docker/metadata-action@v5
+      id: meta
+      with:
+        images: ghcr.io/${{ github.repository }}/socket-dind
+    - run: docker import /tmp/socket-dind-docker-image.tar ${{ steps.meta.outputs.tags }}
+    - run: docker image ls -a
+    - run: timeout 5m docker run --rm --privileged ${{ steps.meta.outputs.tags }}
 
 #   build:
 #     needs: docker-build
